--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^4.1.0",
     "react-to-pdf": "0.0.11"
   },
   "scripts": {
