--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "billing",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@david.kucsai/react-pdf-table": "^0.3.0",
